examples/todo-app/mix_after_task3c.out
Compiling 118 files (.ex)
    error: undefined variable "c"
    │
  4 │     c > 8 and c < 14 or c == 32
    │                         ^
    │
    └─ lib/string_tools.ex:4:25: StringTools.is_space/2

    error: undefined variable "c"
    │
  4 │     c > 8 and c < 14 or c == 32
    │               ^
    │
    └─ lib/string_tools.ex:4:15: StringTools.is_space/2

    error: undefined variable "c"
    │
  4 │     c > 8 and c < 14 or c == 32
    │     ^
    │
    └─ lib/string_tools.ex:4:5: StringTools.is_space/2


== Compilation error in file lib/string_tools.ex ==
** (CompileError) lib/string_tools.ex: cannot compile module StringTools (errors have been logged)

